# conductor

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  OVERVIEW.md  PROGRESS.md  README.md  index.html  llms.txt  mkdocs.yml  pyproject.toml  pytest.ini  spec.md
.claude/commands/: docs-audit.md
.github/workflows/: ci.yml  docs-audit.yml  publish.yml
demo/: app.py  nodes.py
demo/static/: index.html
demo/web/: next.config.ts  package-lock.json  package.json
demo/web/src/app/: globals.css  layout.tsx  page.tsx
demo/web/src/components/flow/: CustomNode.tsx  EventsPanel.tsx  FlowCanvas.tsx  NodeInfoDialog.tsx  Palette.tsx  WidgetField.tsx
demo/web/src/lib/: api.ts  types.ts
docs/: OVERVIEW.md  conductor-design.md  flowengine-design.md  graph-processing-framework-research.md  index.md  llms.txt  shared-references.md  widgets.md
examples/: 01_basic_nodes.ipynb  01_basic_nodes.py  02_build_and_run_flow.ipynb  02_build_and_run_flow.py  03_class_nodes_and_store.ipynb  03_class_nodes_and_store.py  04_control_flow.ipynb  04_control_flow.py  05_auto_discovery.ipynb  05_auto_discovery.py  06_human_in_the_loop.ipynb  06_human_in_the_loop.py  07_shared_references.ipynb  08_widgets.ipynb  09_case_study_miljorapport.ipynb  10_case_study_kk_afgorelse.ipynb
flowengine-design/: index.html
graph-processing-framework-research/: index.html
search/: search_index.json
skills/add-node/: SKILL.md
skills/create-flow/: SKILL.md
tests/: conftest.py
tests/test_core/: test_about.py  test_actor_deps_triggers.py  test_compensation.py  test_compound.py  test_compute_outputs.py  test_compute_outputs_ergonomics.py  test_decision.py  test_discovery.py  test_eager_and_retry.py  test_execution.py  test_expr.py  test_flow_format.py  test_for_each_end_outputs.py  test_graph.py  test_hitl.py  test_integration.py  test_integration_scenarios.py  test_node_abc.py  test_registry.py  test_registry_merge.py  test_retry.py  test_shared_references.py  test_signal.py  test_store.py  test_subprocess.py  test_timeout_idempotency.py  test_type_check.py  test_types.py  test_validation.py  test_viz.py  test_while_loop.py  test_widget_defaults.py  test_widgets.py
tests/test_nodes/: test_conductor_nodes.py  test_if_else_evaluator.py  test_operator_catalog.py
tests/test_providers/: test_fastapi_cache.py  test_react.py
tests/test_stress/: test_engine_stress.py
(+13 files in other folders)
