[project]
name = "conductor-workspace"
version = "0.1.0"
description = "Reusable graph execution engine for DAG-based workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
conductor = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "conductor",
    "ipykernel>=7.2.0",
]
demo = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "conductor"]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
