[project]
name = "conductor-workspace"
version = "0.1.0"
description = "Reusable graph execution engine for DAG-based workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
syv-conductor = { workspace = true }
syv-conductor-nodes = { workspace = true }
syv-conductor-providers = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["examples/*.ipynb", "node.ipynb"]

[tool.ruff.lint]
# Conservative baseline: pyflakes + pycodestyle + isort. Expand later if desired.
select = ["E", "F", "I", "W"]
# E501 (line-too-long) is noisy for prose-ish docstrings and long strings.
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    # fastapi + httpx back the TestClient used by the FastAPI provider tests.
    "fastapi>=0.115",
    "httpx>=0.27",
    "syv-conductor",
    "syv-conductor-nodes",
    "syv-conductor-providers",
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
]
demo = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "syv-conductor"]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
